test complete pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,29 +39,26 @@ variables:
 #   tags:
 #     - iaas
 
-# static_test_service:
-#   stage: test code
-#   # image: iagtech/ansible-lint:2.0.0-public
-#   script:
-#     - docker run --rm -v ${PWD}:/home/ansible-lint iagtech/ansible-lint:2.0.0-public ./infrastructure/site.yml
-#     # - ansible-lint ./infrastructure/site.yml
-#     # - ansible-lint ./infrastructure/build.yml
-#   except:
-#     - triggers
+static_test_service:
+  stage: test code
+  script:
+    - docker run --rm -v ${PWD}:/home/ansible-lint iagtech/ansible-lint:2.0.0-public ./infrastructure/site.yml
+  except:
+    - triggers
 
-# static_test_provision:
-#   stage: test code
-#   image: iagtech/infrastructureascode:1.0.0-maven-public
-#   before_script:
-#     - export AWS_ACCESS_KEY_ID=${AWS_CREDENTIAL_ACCESS_KEY_ID} 
-#     - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
-#     - export AWS_DEFAULT_REGION="us-west-1"
-#   script:
-#     - cd ./infrastructure/terraform
-#     - terraform init -backend-config="key=$CI_PROJECT_NAME-$CI_BUILD_REF_NAME"
-#     - terraform validate -check-variables=false
-#   except:
-#     - triggers
+static_test_provision:
+  stage: test code
+  image: iagtech/infrastructureascode:1.0.0-maven-public
+  before_script:
+    - export AWS_ACCESS_KEY_ID=${AWS_CREDENTIAL_ACCESS_KEY_ID} 
+    - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
+    - export AWS_DEFAULT_REGION="us-west-1"
+  script:
+    - cd ./infrastructure/terraform
+    - terraform init -backend-config="key=$CI_PROJECT_NAME-$CI_BUILD_REF_NAME"
+    - terraform validate -check-variables=false
+  except:
+    - triggers
 
 build_application:
   stage: build application
@@ -80,186 +77,186 @@ build_application:
     - ansible-playbook build.yml 
         --extra-vars="cli_ec2region=us-west-1 cli_aminame=hellowebui cli_ci_pipeline_id='$CI_PIPELINE_ID' cli_ci_commit_message='$CI_COMMIT_MESSAGE'" 
 
-# .deploy: &deploy
-#   image: iagtech/infrastructureascode:1.0.0-maven-public
-#   script:
-#     - pip3 install boto boto3
+.deploy: &deploy
+  image: iagtech/infrastructureascode:1.0.0-maven-public
+  script:
+    - pip3 install boto boto3
 
-#     - export ANSIBLE_HOST_KEY_CHECKING=False
-#     - chmod 400 ./infrastructure/hellowebui_key.pem
-#     - export AWS_ACCESS_KEY_ID=${AWS_CREDENTIAL_ACCESS_KEY_ID} 
-#     - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
-#     - export AWS_DEFAULT_REGION=$ENV_AWS_DEFAULT_REGION
+    - export ANSIBLE_HOST_KEY_CHECKING=False
+    - chmod 400 ./infrastructure/hellowebui_key.pem
+    - export AWS_ACCESS_KEY_ID=${AWS_CREDENTIAL_ACCESS_KEY_ID} 
+    - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
+    - export AWS_DEFAULT_REGION=$ENV_AWS_DEFAULT_REGION
 
-#     - cd ./infrastructure
-#     - ansible-galaxy install -r ./roles/requirements.yml --roles-path ./roles
-#     - ansible-playbook site.yml 
-#         --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'"
-#         --tags "provision,provision-core,setup-core" 
+    - cd ./infrastructure
+    - ansible-galaxy install -r ./roles/requirements.yml --roles-path ./roles
+    - ansible-playbook site.yml 
+        --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'"
+        --tags "provision,provision-core,setup-core" 
 
-# review:
-#   <<: *deploy
-#   stage: review application
-#   variables:
-#     ENV_TOWER_CLI_HOST: $TOWER_CLI_HOST
-#     ENV_TOWER_CLI_USERNAME: $TOWER_CLI_USERNAME
-#     ENV_TOWER_CLI_PASSWORD: $TOWER_CLI_PASSWORD
-#     ENV_AWS_DEFAULT_REGION: "us-west-1"
-#     STACKNAME: $CI_PROJECT_NAME-$CI_BUILD_REF_NAME
-#     ENVIRONMENT: $CI_PROJECT_NAME-$CI_BUILD_REF_NAME
+review:
+  <<: *deploy
+  stage: review application
+  variables:
+    ENV_TOWER_CLI_HOST: $TOWER_CLI_HOST
+    ENV_TOWER_CLI_USERNAME: $TOWER_CLI_USERNAME
+    ENV_TOWER_CLI_PASSWORD: $TOWER_CLI_PASSWORD
+    ENV_AWS_DEFAULT_REGION: "us-west-1"
+    STACKNAME: $CI_PROJECT_NAME-$CI_BUILD_REF_NAME
+    ENVIRONMENT: $CI_PROJECT_NAME-$CI_BUILD_REF_NAME
 
-#   environment:
-#     name: $CI_BUILD_REF_NAME
-#     # url: http://userapi-apigateway-$CI_PROJECT_PATH_SLUG-$CI_BUILD_REF_NAME.$OPENSHIFT_DOMAIN
-#     on_stop: stop-review
-#   only:
-#     - branches
-#   except:
-#     - master
+  environment:
+    name: $CI_BUILD_REF_NAME
+    # url: http://userapi-apigateway-$CI_PROJECT_PATH_SLUG-$CI_BUILD_REF_NAME.$OPENSHIFT_DOMAIN
+    on_stop: stop-review
+  only:
+    - branches
+  except:
+    - master
 
-# plan:
-#   stage: review application
-#   image: iagtech/infrastructureascode:1.0.0-maven-public
-#   before_script:
-#     - pip3 install boto boto3
+plan:
+  stage: review application
+  image: iagtech/infrastructureascode:1.0.0-maven-public
+  before_script:
+    - pip3 install boto boto3
 
-#     - export ANSIBLE_HOST_KEY_CHECKING=False
-#     - chmod 400 ./infrastructure/hellowebui_key.pem
-#     - export AWS_ACCESS_KEY_ID=${AWS_CREDENTIAL_ACCESS_KEY_ID} 
-#     - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
-#     - export AWS_DEFAULT_REGION="us-west-1"
-#   script:
-#     - cd ./infrastructure
-#     - ansible-galaxy install -r ./roles/requirements.yml --roles-path ./roles
-#     - ansible-playbook site.yml 
-#         --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
-#         --tags "provision-conformity"
-#     - terraform show ./terraform/plan.tfstate
+    - export ANSIBLE_HOST_KEY_CHECKING=False
+    - chmod 400 ./infrastructure/hellowebui_key.pem
+    - export AWS_ACCESS_KEY_ID=${AWS_CREDENTIAL_ACCESS_KEY_ID} 
+    - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
+    - export AWS_DEFAULT_REGION="us-west-1"
+  script:
+    - cd ./infrastructure
+    - ansible-galaxy install -r ./roles/requirements.yml --roles-path ./roles
+    - ansible-playbook site.yml 
+        --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
+        --tags "provision-conformity"
+    - terraform show ./terraform/plan.tfstate
 
-#   only:
-#     - branches
-#   except:
-#     - master
-#   artifacts:
-#     paths:
-#       - ${PWD}/infrastructure/terraform/plan.tfstate
+  only:
+    - branches
+  except:
+    - master
+  artifacts:
+    paths:
+      - ${PWD}/infrastructure/terraform/plan.tfstate
 
-# deploy_staging:
-#   <<: *deploy
-#   stage: review application
-#   variables:
-#     ENV_TOWER_CLI_HOST: $TOWER_CLI_HOST
-#     ENV_TOWER_CLI_USERNAME: $TOWER_CLI_USERNAME
-#     ENV_TOWER_CLI_PASSWORD: $TOWER_CLI_PASSWORD
-#     ENV_AWS_DEFAULT_REGION: "us-west-1"
-#     STACKNAME: $STACKNAME_STG
-#     ENVIRONMENT: staging
+deploy_staging:
+  <<: *deploy
+  stage: review application
+  variables:
+    ENV_TOWER_CLI_HOST: $TOWER_CLI_HOST
+    ENV_TOWER_CLI_USERNAME: $TOWER_CLI_USERNAME
+    ENV_TOWER_CLI_PASSWORD: $TOWER_CLI_PASSWORD
+    ENV_AWS_DEFAULT_REGION: "us-west-1"
+    STACKNAME: $STACKNAME_STG
+    ENVIRONMENT: staging
 
-#   environment:
-#     name: staging
-#     # url: http://userapi-apigateway-$CI_PROJECT_PATH_SLUG-$CI_BUILD_REF_NAME.$OPENSHIFT_DOMAIN
-#     on_stop: stop-staging
-#   only:
-#       - master
-#   except:
-#     - triggers
+  environment:
+    name: staging
+    # url: http://userapi-apigateway-$CI_PROJECT_PATH_SLUG-$CI_BUILD_REF_NAME.$OPENSHIFT_DOMAIN
+    on_stop: stop-staging
+  only:
+      - master
+  except:
+    - triggers
 
-# functional_regression_test_staging:
-#   stage: regression test deploy
-#   image: iagtech/infrastructureascode:1.0.0-maven-public
-#   before_script:
-#     - pip3 install boto boto3
+functional_regression_test_staging:
+  stage: regression test deploy
+  image: iagtech/infrastructureascode:1.0.0-maven-public
+  before_script:
+    - pip3 install boto boto3
 
-#     - export ANSIBLE_HOST_KEY_CHECKING=False
-#     - chmod 400 ./infrastructure/hellowebui_key.pem
-#     - export AWS_ACCESS_KEY_ID=${AWS_CREDENTIAL_ACCESS_KEY_ID} 
-#     - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
-#     - export AWS_DEFAULT_REGION="us-west-1"
-#   script:
-#     - cd ./infrastructure
-#     - ansible-galaxy install -r ./roles/requirements.yml --roles-path ./roles
-#     - ansible-playbook site.yml 
-#       --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME_STG cli_deploymentenv=staging cli_action=test cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
-#       --tags "provision,provision-test,setup-test" 
-#     - cd ../
+    - export ANSIBLE_HOST_KEY_CHECKING=False
+    - chmod 400 ./infrastructure/hellowebui_key.pem
+    - export AWS_ACCESS_KEY_ID=${AWS_CREDENTIAL_ACCESS_KEY_ID} 
+    - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
+    - export AWS_DEFAULT_REGION="us-west-1"
+  script:
+    - cd ./infrastructure
+    - ansible-galaxy install -r ./roles/requirements.yml --roles-path ./roles
+    - ansible-playbook site.yml 
+      --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME_STG cli_deploymentenv=staging cli_action=test cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
+      --tags "provision,provision-test,setup-test" 
+    - cd ../
 
-#     - mvn clean package -f ./hellowebui-functional-test
-#     - SUT_IP="$(aws ec2 describe-instances --filters "Name=tag:Role,Values=Core Instance" "Name=tag:stackname,Values=$STACKNAME_STG" "Name=instance-state-name,Values=running" | jq ".Reservations[0].Instances[0].PublicIpAddress" | tr -d \")"
-#     - TESTER_IP="$(aws ec2 describe-instances --filters "Name=tag:Role,Values=Test Instance" "Name=tag:stackname,Values=$STACKNAME_STG" "Name=instance-state-name,Values=running" | jq ".Reservations[0].Instances[0].PublicIpAddress" | tr -d \")"
-#     - java -jar ./hellowebui-functional-test/target/hellowebui-functional-test-0.0.1-SNAPSHOT.jar $SUT_IP $TESTER_IP
+    - mvn clean package -f ./hellowebui-functional-test
+    - SUT_IP="$(aws ec2 describe-instances --filters "Name=tag:Role,Values=Core Instance" "Name=tag:stackname,Values=$STACKNAME_STG" "Name=instance-state-name,Values=running" | jq ".Reservations[0].Instances[0].PublicIpAddress" | tr -d \")"
+    - TESTER_IP="$(aws ec2 describe-instances --filters "Name=tag:Role,Values=Test Instance" "Name=tag:stackname,Values=$STACKNAME_STG" "Name=instance-state-name,Values=running" | jq ".Reservations[0].Instances[0].PublicIpAddress" | tr -d \")"
+    - java -jar ./hellowebui-functional-test/target/hellowebui-functional-test-0.0.1-SNAPSHOT.jar $SUT_IP $TESTER_IP
 
-#     - cd ./infrastructure
-#     - ansible-galaxy install -r ./roles/requirements.yml --roles-path ./roles
-#     - ansible-playbook site.yml 
-#       --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME_STG cli_deploymentenv=staging cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
-#       --tags "provision" 
-#   only:
-#     - master
-#   except:
-#     - triggers
+    - cd ./infrastructure
+    - ansible-galaxy install -r ./roles/requirements.yml --roles-path ./roles
+    - ansible-playbook site.yml 
+      --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME_STG cli_deploymentenv=staging cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
+      --tags "provision" 
+  only:
+    - master
+  except:
+    - triggers
 
-# stop-staging:
-#   image: iagtech/infrastructureascode:1.0.0-maven-public
-#   stage: review application
-#   variables:
-#     ENV_TOWER_CLI_HOST: $TOWER_CLI_HOST
-#     ENV_TOWER_CLI_USERNAME: $TOWER_CLI_USERNAME
-#     ENV_TOWER_CLI_PASSWORD: $TOWER_CLI_PASSWORD
-#     ENV_AWS_DEFAULT_REGION: "us-west-1"
-#     STACKNAME: $STACKNAME_STG
-#     ENVIRONMENT: staging
-#   before_script:
-#     - pip3 install boto boto3
+stop-staging:
+  image: iagtech/infrastructureascode:1.0.0-maven-public
+  stage: review application
+  variables:
+    ENV_TOWER_CLI_HOST: $TOWER_CLI_HOST
+    ENV_TOWER_CLI_USERNAME: $TOWER_CLI_USERNAME
+    ENV_TOWER_CLI_PASSWORD: $TOWER_CLI_PASSWORD
+    ENV_AWS_DEFAULT_REGION: "us-west-1"
+    STACKNAME: $STACKNAME_STG
+    ENVIRONMENT: staging
+  before_script:
+    - pip3 install boto boto3
 
-#     - export ANSIBLE_HOST_KEY_CHECKING=False
-#     - chmod 400 ./infrastructure/hellowebui_key.pem
-#     - export AWS_ACCESS_KEY_ID=${AWS_CREDENTIAL_ACCESS_KEY_ID} 
-#     - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
-#     - export AWS_DEFAULT_REGION=$ENV_AWS_DEFAULT_REGION
-#   script:
-#     - cd ./infrastructure
-#     - ansible-galaxy install -r ./roles/requirements.yml --roles-path ./roles
-#     - ansible-playbook site.yml 
-#         --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
-#         --tags "deprovision" 
-#   when: manual
-#   environment:
-#     name: staging
-#     action: stop
-#   only:
-#       - master
-#   except:
-#     - triggers
+    - export ANSIBLE_HOST_KEY_CHECKING=False
+    - chmod 400 ./infrastructure/hellowebui_key.pem
+    - export AWS_ACCESS_KEY_ID=${AWS_CREDENTIAL_ACCESS_KEY_ID} 
+    - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
+    - export AWS_DEFAULT_REGION=$ENV_AWS_DEFAULT_REGION
+  script:
+    - cd ./infrastructure
+    - ansible-galaxy install -r ./roles/requirements.yml --roles-path ./roles
+    - ansible-playbook site.yml 
+        --extra-vars="cli_ec2region=$AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
+        --tags "deprovision" 
+  when: manual
+  environment:
+    name: staging
+    action: stop
+  only:
+      - master
+  except:
+    - triggers
 
-# stop-review:
-#   image: iagtech/infrastructureascode:1.0.0-maven-public
-#   stage: review application
-#   variables:
-#     ENV_TOWER_CLI_HOST: $TOWER_CLI_HOST
-#     ENV_TOWER_CLI_USERNAME: $TOWER_CLI_USERNAME
-#     ENV_TOWER_CLI_PASSWORD: $TOWER_CLI_PASSWORD
-#     ENV_AWS_DEFAULT_REGION: "us-west-1"
-#     STACKNAME: $CI_PROJECT_NAME-$CI_BUILD_REF_NAME
-#     ENVIRONMENT: $CI_PROJECT_NAME-$CI_BUILD_REF_NAME
-#   before_script:
-#     - pip3 install boto boto3
+stop-review:
+  image: iagtech/infrastructureascode:1.0.0-maven-public
+  stage: review application
+  variables:
+    ENV_TOWER_CLI_HOST: $TOWER_CLI_HOST
+    ENV_TOWER_CLI_USERNAME: $TOWER_CLI_USERNAME
+    ENV_TOWER_CLI_PASSWORD: $TOWER_CLI_PASSWORD
+    ENV_AWS_DEFAULT_REGION: "us-west-1"
+    STACKNAME: $CI_PROJECT_NAME-$CI_BUILD_REF_NAME
+    ENVIRONMENT: $CI_PROJECT_NAME-$CI_BUILD_REF_NAME
+  before_script:
+    - pip3 install boto boto3
 
-#     - export ANSIBLE_HOST_KEY_CHECKING=False
-#     - chmod 400 ./infrastructure/hellowebui_key.pem
-#     - export AWS_ACCESS_KEY_ID=${AWS_CREDENTIAL_ACCESS_KEY_ID} 
-#     - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
-#     - export AWS_DEFAULT_REGION=$ENV_AWS_DEFAULT_REGION
-#   script:
-#     - cd ./infrastructure
-#     - ansible-galaxy install -r ./roles/requirements.yml --roles-path ./roles
-#     - ansible-playbook site.yml 
-#         --extra-vars="cli_ec2region=$ENV_AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
-#         --tags "deprovision" 
-#   when: manual
-#   environment:
-#     name: $CI_BUILD_REF_NAME
-#     action: stop
-#   only:
-#     - branches
-#   except:
-#     - master
+    - export ANSIBLE_HOST_KEY_CHECKING=False
+    - chmod 400 ./infrastructure/hellowebui_key.pem
+    - export AWS_ACCESS_KEY_ID=${AWS_CREDENTIAL_ACCESS_KEY_ID} 
+    - export AWS_SECRET_ACCESS_KEY=${AWS_CREDENTIAL_SECRET_ACCESS_KEY}
+    - export AWS_DEFAULT_REGION=$ENV_AWS_DEFAULT_REGION
+  script:
+    - cd ./infrastructure
+    - ansible-galaxy install -r ./roles/requirements.yml --roles-path ./roles
+    - ansible-playbook site.yml 
+        --extra-vars="cli_ec2region=$ENV_AWS_DEFAULT_REGION cli_aws_access_key=${AWS_CREDENTIAL_ACCESS_KEY_ID} cli_aws_secret_key=${AWS_CREDENTIAL_SECRET_ACCESS_KEY} cli_tf=./terraform cli_stackname=$STACKNAME cli_deploymentenv=$ENVIRONMENT cli_action=deployment cli_ci_pipeline_id='$CI_PIPELINE_ID'" 
+        --tags "deprovision" 
+  when: manual
+  environment:
+    name: $CI_BUILD_REF_NAME
+    action: stop
+  only:
+    - branches
+  except:
+    - master
